cert-manager/vault-example/manifests/kuard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    cert-manager.io/issuer: "my-vault-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo.localdev.me
      secretName: my-cert1-tls
  rules:
    - host: demo.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard
                port:
                  number: 80
